@startuml

title __HORSE_RACE's Class Diagram__\n

  namespace  {
    class Horse {
    }
  }
  

  namespace  {
    class HorseRace {
    }
  }
  

  namespace  {
    class Main {
    }
  }
  

  HorseRace -up-|> javafx.application.Application
  HorseRace o-- Horse : winner


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
